--- a/index.html
+++ b/index.html
@@ -185,27 +185,27 @@
 </div>
 <div class="lower-block">
 <div class="right-panel" data-section="defense" id="player-defense">
-<img alt="Шлем" src="Data/Images/img_item/e-16.gif"/>
-<img alt="Щит" src="Data/Images/img_item/e-17.gif"/>
-<img alt="Перчатки" src="Data/Images/img_item/e-18.gif"/>
-<img alt="Ботинки" src="Data/Images/img_item/e-19.gif"/>
-</div>
+<img alt="Шлем" src="Data/Images/img_item/e-16.gif">
+<img alt="Щит" src="Data/Images/img_item/e-17.gif">
+<img alt="Перчатки" src="Data/Images/img_item/e-18.gif">
+<img alt="Ботинки" src="Data/Images/img_item/e-19.gif">
+</img></img></img></img></div>
 <div class="stats-panel" data-section="stats" id="player-stats">
-<p><strong>🧬 Уровень:</strong></p>
-<p><strong>🏆 Победы:</strong></p>
-<p><strong>💀 Поражения:</strong></p>
-<p><strong>⚖️ Ничьи:</strong></p>
+<p><strong>🧬 Уровень:</strong> 5</p>
+<p><strong>🏆 Победы:</strong> 12</p>
+<p><strong>💀 Поражения:</strong> 8</p>
+<p><strong>⚖️ Ничьи:</strong> 3</p>
 <hr/>
-<p><strong>💪 Сила:</strong></p>
-<p><strong>🤸 Ловкость:</strong></p>
-<p><strong>🧠 Интуиция:</strong></p>
-<p><strong>❤️ Выносливость:</strong></p>
+<p><strong>💪 Сила:</strong> 10</p>
+<p><strong>🤸 Ловкость:</strong> 8</p>
+<p><strong>🧠 Интуиция:</strong> 7</p>
+<p><strong>❤️ Выносливость:</strong> 12</p>
 <hr/>
-<p><strong>🛡️ Броня:</strong></p>
+<p><strong>🛡️ Броня:</strong><br/>🪖 Головы: 5<br/>👕 Тела: 10<br/>🥾 Ног: 4</p>
 <hr/>
-<p><strong>⚔️ Владение оружием:</strong></p>
+<p><strong>⚔️ Владение оружием:</strong><br/>🗡️ Мечи: 45%<br/>🔨 Дубины и булавы: 32%<br/>🪓 Топоры: 20%<br/>🗡️ Кинжалы: 60%</p>
 <hr/>
-<p><strong>🛠️ Специализация:</strong></p>
+<p><strong>🛠️ Специализация:</strong><br/>⛏️ Рудокоп: 30%<br/>🎣 Рыбак: 12%<br/>🪵 Плотник: 44%<br/>⚗️ Алхимик: 20%<br/>🌾 Фермер: 5%<br/>🌲 Лесоруб: 15%<br/>🍳 Повар: 25%<br/>💊 Лекарь: 10%</p>
 </div>
 </div>
 </div></section>
@@ -213,6 +213,7 @@
 <div class="battle-area" data-section="arena" id="battle-area"></div>
 <div class="system-log" data-section="log" id="battle-log"></div>
 </section>
+
 <aside class="right" id="side-panel" style="grid-column: 3; grid-row: 1 / span 2;">
 <div class="block" data-section="map" id="map">
 <strong>Карта:</strong>
@@ -232,53 +233,51 @@ window.addEventListener("DOMContentLoaded", function () {
   const tg = window.Telegram.WebApp;
   const initData = tg.initDataUnsafe;
 
-  if (!initData || !initData.user) {
-    console.log("Данные Telegram не найдены");
-    return;
-  }
+  if (!initData || !initData.user) return;
 
   const userId = initData.user.id;
   const username = initData.user.username || initData.user.first_name;
-  document.querySelector("h1").innerText = `[${username}]`;
 
-  fetch("Player_Profile.json")
-    .then(res => res.json())
-    .then(data => {
-      const player = data.find(p => p.telegram_id === userId);
-      if (!player) return;
+  fetch("http://127.0.0.1:5000/get_player", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ telegram_id: userId, nickname: username })
+  })
+  .then(res => res.json())
+  .then(player => {
+    document.querySelector("h1").innerText = `[${player.nickname}]`;
 
-      const stats = player.stats;
-
-      const statLines = document.querySelectorAll("#player-stats p");
-      if (statLines.length > 0) statLines[0].innerHTML = `<strong>🧬 Уровень:</strong> ${stats.level}`;
-      if (statLines.length > 1) statLines[1].innerHTML = `<strong>🏆 Победы:</strong> ${stats.wins}`;
-      if (statLines.length > 2) statLines[2].innerHTML = `<strong>💀 Поражения:</strong> ${stats.losses}`;
-      if (statLines.length > 3) statLines[3].innerHTML = `<strong>⚖️ Ничьи:</strong> ${stats.draws}`;
-      if (statLines.length > 5) statLines[5].innerHTML = `<strong>💪 Сила:</strong> ${stats.strength}`;
-      if (statLines.length > 6) statLines[6].innerHTML = `<strong>🤸 Ловкость:</strong> ${stats.agility}`;
-      if (statLines.length > 7) statLines[7].innerHTML = `<strong>🧠 Интуиция:</strong> ${stats.intuition}`;
-      if (statLines.length > 8) statLines[8].innerHTML = `<strong>❤️ Выносливость:</strong> ${stats.endurance}`;
-      
-      statLines.forEach(line => {
-        if (line.innerHTML.includes("🛡️ Броня:")) {
-          line.innerHTML = `<strong>🛡️ Броня:</strong><br />🪖 Головы: ${stats.armor.head}<br />👕 Тела: ${stats.armor.body}<br />🥾 Ног: ${stats.armor.legs}`;
-        }
-        if (line.innerHTML.includes("⚔️ Владение оружием:")) {
-          line.innerHTML = `<strong>⚔️ Владение оружием:</strong><br />🗡️ Мечи: ${stats.weapon_skills.swords}%<br />🔨 Дубины и булавы: ${stats.weapon_skills.maces}%<br />🪓 Топоры: ${stats.weapon_skills.axes}%<br />🗡️ Кинжалы: ${stats.weapon_skills.daggers}%`;
-        }
-        if (line.innerHTML.includes("🛠️ Специализация:")) {
-          line.innerHTML = `<strong>🛠️ Специализация:</strong><br />
-          ⛏️ Рудокоп: ${stats.specializations.miner}%<br />
-          🎣 Рыбак: ${stats.specializations.fisher}%<br />
-          🪵 Плотник: ${stats.specializations.carpenter}%<br />
-          ⚗️ Алхимик: ${stats.specializations.alchemist}%<br />
-          🌾 Фермер: ${stats.specializations.farmer}%<br />
-          🌲 Лесоруб: ${stats.specializations.lumberjack}%<br />
-          🍳 Повар: ${stats.specializations.cook}%<br />
-          💊 Лекарь: ${stats.specializations.healer}%`;
-        }
-      });
+    const stats = player.stats;
+    const statLines = document.querySelectorAll("#player-stats p");
+    if (statLines.length > 0) statLines[0].innerHTML = `<strong>🧬 Уровень:</strong> ${stats.level}`;
+    if (statLines.length > 1) statLines[1].innerHTML = `<strong>🏆 Победы:</strong> ${stats.wins}`;
+    if (statLines.length > 2) statLines[2].innerHTML = `<strong>💀 Поражения:</strong> ${stats.losses}`;
+    if (statLines.length > 3) statLines[3].innerHTML = `<strong>⚖️ Ничьи:</strong> ${stats.draws}`;
+    if (statLines.length > 5) statLines[5].innerHTML = `<strong>💪 Сила:</strong> ${stats.strength}`;
+    if (statLines.length > 6) statLines[6].innerHTML = `<strong>🤸 Ловкость:</strong> ${stats.agility}`;
+    if (statLines.length > 7) statLines[7].innerHTML = `<strong>🧠 Интуиция:</strong> ${stats.intuition}`;
+    if (statLines.length > 8) statLines[8].innerHTML = `<strong>❤️ Выносливость:</strong> ${stats.endurance}`;
+    
+    statLines.forEach(line => {
+      if (line.innerHTML.includes("🛡️ Броня:")) {
+        line.innerHTML = `<strong>🛡️ Броня:</strong><br />🪖 Головы: ${stats.armor.head}<br />👕 Тела: ${stats.armor.body}<br />🥾 Ног: ${stats.armor.legs}`;
+      }
+      if (line.innerHTML.includes("⚔️ Владение оружием:")) {
+        line.innerHTML = `<strong>⚔️ Владение оружием:</strong><br />🗡️ Мечи: ${stats.weapon_skills.swords}%<br />🔨 Дубины и булавы: ${stats.weapon_skills.maces}%<br />🪓 Топоры: ${stats.weapon_skills.axes}%<br />🗡️ Кинжалы: ${stats.weapon_skills.daggers}%`;
+      }
+      if (line.innerHTML.includes("🛠️ Специализация:")) {
+        line.innerHTML = `<strong>🛠️ Специализация:</strong><br />
+        ⛏️ Рудокоп: ${stats.specializations.miner}%<br />
+        🎣 Рыбак: ${stats.specializations.fisher}%<br />
+        🪵 Плотник: ${stats.specializations.carpenter}%<br />
+        ⚗️ Алхимик: ${stats.specializations.alchemist}%<br />
+        🌾 Фермер: ${stats.specializations.farmer}%<br />
+        🌲 Лесоруб: ${stats.specializations.lumberjack}%<br />
+        🍳 Повар: ${stats.specializations.cook}%<br />
+        💊 Лекарь: ${stats.specializations.healer}%`;
+      }
     });
+  });
 });
 </script>
 </body>
